Fix broken css and add comments

--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,45 @@
-body
+body {
   font-size: 14px;
 }
-
+/* header */
 nav {
-  background color: yellow;
+  background-color: yellow;
   height: 100px;
-  margin-top: -10px;
+  margin-top: 10px;
   position: fixed;
   width: 100%;
-
-
+}
+/* main div area */
 section {
-  margin: 0 auto;
+  padding-top: 110px;
+  margin: auto;
   width: 60%;
 }
 
 h1 {
-  font-family sans-serif;
+  font-family: sans-serif;
   font-size: 2em;
 }
-
+/* padding and alignment for all text used */
 .example, h3 {
   padding-top: 30px;
-  text-align center
+  text-align: center;
 }
 
 h3 {
   font-size: 1.3em;
 }
-
+/* First six div elements */
 .element {
   background-color: green;
   height: 100px;
-  margin 10px 0;
+  margin: 10px 0;
   width: 100%;
+}
+/* Last three div elements */
+.different {
+  background-color: orange;
+  height: 100px;
+  margin: 10px 0;
+  width: 100%;
+}
